Update App.xaml, CommandHandler.cs, and 10 more files...

--- a/TechnoCAD.WPFTest/TechnoCAD.WPFTest.csproj
+++ b/TechnoCAD.WPFTest/TechnoCAD.WPFTest.csproj
@@ -55,6 +55,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commons\CommandHandler.cs" />
+    <Compile Include="Controllers\MainWindowController.cs" />
+    <Compile Include="Models\AbstractModel.cs" />
+    <Compile Include="Models\Building.cs" />
+    <Compile Include="Models\Parcel.cs" />
+    <Compile Include="Views\Pages\BuildingPage.xaml.cs">
+      <DependentUpon>BuildingPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Pages\ParcelPage.xaml.cs">
+      <DependentUpon>ParcelPage.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -67,6 +78,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\Pages\BuildingPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Pages\ParcelPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -95,8 +114,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Views\Pages\" />
+    <Folder Include="Data\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
