--- a/TechnoCAD.WPFTest/TechnoCAD.WPFTest.csproj
+++ b/TechnoCAD.WPFTest/TechnoCAD.WPFTest.csproj
@@ -57,15 +57,18 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Commons\CommandHandler.cs" />
+    <Compile Include="Commons\ImageToSourceConverter.cs" />
     <Compile Include="Commons\ModelFactory.cs" />
     <Compile Include="Controllers\BuildingPageController.cs" />
     <Compile Include="Controllers\MainWindowController.cs" />
     <Compile Include="Controllers\ParcelPageController.cs" />
+    <Compile Include="Interfaces\IAllertAdapter.cs" />
+    <Compile Include="Interfaces\IAllertGenerator.cs" />
     <Compile Include="Interfaces\IViewAdapter.cs" />
     <Compile Include="Models\AbstractModel.cs" />
     <Compile Include="Models\BuildingModel.cs" />
     <Compile Include="Models\ParcelModel.cs" />
-    <Compile Include="Models\WrongModel.cs" />
+    <Compile Include="Models\AllertModel.cs" />
     <Compile Include="Views\Pages\BuildingPage.xaml.cs">
       <DependentUpon>BuildingPage.xaml</DependentUpon>
     </Compile>
