--- a/TechnoCAD.WPFTest/TechnoCAD.WPFTest.csproj
+++ b/TechnoCAD.WPFTest/TechnoCAD.WPFTest.csproj
@@ -59,9 +59,9 @@
     <Compile Include="Commons\CommandHandler.cs" />
     <Compile Include="Commons\ImageToSourceConverter.cs" />
     <Compile Include="Commons\ModelFactory.cs" />
-    <Compile Include="Controllers\BuildingPageController.cs" />
-    <Compile Include="Controllers\MainWindowController.cs" />
-    <Compile Include="Controllers\ParcelPageController.cs" />
+    <Compile Include="Controllers\BuildingViewDataContext.cs" />
+    <Compile Include="Controllers\MainWindowDataContext.cs" />
+    <Compile Include="Controllers\ParcelViewDataContext.cs" />
     <Compile Include="Interfaces\IAllertAdapter.cs" />
     <Compile Include="Interfaces\IAllertGenerator.cs" />
     <Compile Include="Interfaces\IViewAdapter.cs" />
@@ -69,11 +69,11 @@
     <Compile Include="Models\BuildingModel.cs" />
     <Compile Include="Models\ParcelModel.cs" />
     <Compile Include="Models\AllertModel.cs" />
-    <Compile Include="Views\Pages\BuildingPage.xaml.cs">
-      <DependentUpon>BuildingPage.xaml</DependentUpon>
+    <Compile Include="Views\Pages\BuildingView.xaml.cs">
+      <DependentUpon>BuildingView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Pages\ParcelPage.xaml.cs">
-      <DependentUpon>ParcelPage.xaml</DependentUpon>
+    <Compile Include="Views\Pages\ParcelView.xaml.cs">
+      <DependentUpon>ParcelView.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -87,11 +87,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Views\Pages\BuildingPage.xaml">
+    <Page Include="Views\Pages\BuildingView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Pages\ParcelPage.xaml">
+    <Page Include="Views\Pages\ParcelView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
